tests/snapshots/examples_fixtures/guide_type_system__Guide__Factories.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/guide_type_system/Guide/Factories.flx
== compile ==
failed (module)
== diagnostics ==
--> compiler error[E024]: MODULE PATH MISMATCH

Module name `Guide.Factories` doesn't match file path `examples/guide_type_system/Guide/Factories.flx`.

  --> examples/guide_type_system/Guide/Factories.flx:1:1
  |
1 | module Guide.Factories {
  | ^

Hint:
  Rename the module or move the file to match.
== stdout ==
<not executed>
